added more slides and some code